
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__ Name; } ;


 int BIND_PORT ;
 int DEFAULT_PORT ;
 TYPE_1__* Targets ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int stderr ;

void Usage(char *Prog)
{
        int i;
        fprintf(stderr, "Usage: %s <options>\n\n"
                        "Options:\n\n"
                        " -t target     : Select the target\n"
   " -p portnumber : Sets a new port number <default: %d>\n"
                        " -r bindport   : Sets the port to bind a shell <default: %d>\n\n"
                        "Targets:\n\n",Prog,DEFAULT_PORT,BIND_PORT);

        for(i=0;;i++)
        {
                if(Targets[i].Name != 0)
                        fprintf(stderr," [%u] %s\n",i,Targets[i].Name);
                else
                        break;
        }
        fprintf(stderr,"\n");
        exit(1);
}
