; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1486.c_Usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1486.c_Usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [193 x i8] c"Usage: %s <options>\0A\0AOptions:\0A\0A -t target     : Select the target\0A -p portnumber : Sets a new port number <default: %d>\0A -r bindport   : Sets the port to bind a shell <default: %d>\0A\0ATargets:\0A\0A\00", align 1
@DEFAULT_PORT = common dso_local global i32 0, align 4
@BIND_PORT = common dso_local global i32 0, align 4
@Targets = common dso_local global %struct.TYPE_2__* null, align 8
@.str.1 = private unnamed_addr constant [10 x i8] c" [%u] %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @stderr, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = load i32, i32* @DEFAULT_PORT, align 4
  %7 = load i32, i32* @BIND_PORT, align 4
  %8 = call i32 (i32, i8*, ...) @fprintf(i32 %4, i8* getelementptr inbounds ([193 x i8], [193 x i8]* @.str, i64 0, i64 0), i8* %5, i32 %6, i32 %7)
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %29, %1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Targets, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %9
  %18 = load i32, i32* @stderr, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Targets, align 8
  %21 = load i32, i32* %3, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 (i32, i8*, ...) @fprintf(i32 %18, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %19, i64 %25)
  br label %28

27:                                               ; preds = %9
  br label %32

28:                                               ; preds = %17
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %3, align 4
  br label %9

32:                                               ; preds = %27
  %33 = load i32, i32* @stderr, align 4
  %34 = call i32 (i32, i8*, ...) @fprintf(i32 %33, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %35 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
